--- a/.config/latte/meow.layout.latte
+++ b/.config/latte/meow.layout.latte
@@ -126,6 +126,7 @@ panelPosition=10
 panelSize=100
 panelTransparency=80
 plasmaBackgroundForPopups=true
+screenEdgeMargin=5
 shadowOpacity=40
 shadowSize=45
 shadowsUpgraded=true
@@ -148,7 +149,8 @@ extraDotOnActive=true
 glowOpacity=1
 lengthPadding=0
 minimizedTaskColoredDifferently=true
-size=0.06
+size=0.09
+thickMargin=0.05
 
 [Containments][1][Indicator][org.kde.latte.plasma][General]
 lengthPadding=0
@@ -180,7 +182,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][6][Applets][11][Configuration]
-PreloadWeight=87
+PreloadWeight=84
 
 [Containments][6][Applets][13]
 immutability=1
@@ -201,7 +203,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][6][Applets][16][Configuration]
-PreloadWeight=100
+PreloadWeight=97
 
 [Containments][6][Applets][58]
 immutability=1
@@ -240,7 +242,7 @@ immutability=1
 plugin=org.kde.plasma.mediacontroller
 
 [Containments][6][Applets][74][Configuration]
-PreloadWeight=42
+PreloadWeight=18
 
 [Containments][6][Applets][9]
 immutability=1
