Updated readme + misc changes

--- a/.config/latte/meow.layout.latte
+++ b/.config/latte/meow.layout.latte
@@ -27,7 +27,7 @@ immutability=1
 plugin=org.kde.plasma.kickoff
 
 [Containments][1][Applets][4][Configuration]
-PreloadWeight=99
+PreloadWeight=100
 
 [Containments][1][Applets][4][Configuration][ConfigDialog]
 DialogHeight=720
@@ -44,7 +44,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][5][Configuration]
-PreloadWeight=94
+PreloadWeight=100
 SystrayContainmentId=6
 
 [Containments][1][Applets][64]
@@ -52,7 +52,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][64][Configuration]
-PreloadWeight=68
+PreloadWeight=65
 
 [Containments][1][Applets][64][Configuration][Appearance]
 dateDisplayFormat=BesideTime
@@ -75,6 +75,7 @@ DialogWidth=960
 
 [Containments][1][Applets][69][Configuration][General]
 showOnlyCurrentScreen=true
+wrapPage=true
 
 [Containments][1][Applets][73]
 immutability=1
@@ -175,14 +176,14 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][6][Applets][10][Configuration]
-PreloadWeight=5
+PreloadWeight=27
 
 [Containments][6][Applets][11]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][6][Applets][11][Configuration]
-PreloadWeight=62
+PreloadWeight=100
 
 [Containments][6][Applets][13]
 immutability=1
@@ -196,14 +197,14 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][6][Applets][14][Configuration]
-PreloadWeight=76
+PreloadWeight=100
 
 [Containments][6][Applets][16]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][6][Applets][16][Configuration]
-PreloadWeight=89
+PreloadWeight=100
 
 [Containments][6][Applets][58]
 immutability=1
@@ -240,6 +241,9 @@ PreloadWeight=0
 [Containments][6][Applets][74]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
+
+[Containments][6][Applets][74][Configuration]
+PreloadWeight=18
 
 [Containments][6][Applets][9]
 immutability=1
