--- a/.config/latte/meow.layout.latte
+++ b/.config/latte/meow.layout.latte
@@ -53,7 +53,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][1][Applets][64][Configuration]
-PreloadWeight=92
+PreloadWeight=97
 
 [Containments][1][Applets][64][Configuration][Appearance]
 dateDisplayFormat=BesideTime
@@ -291,6 +291,9 @@ volumeStep=2
 [Containments][6][Applets][91]
 immutability=1
 plugin=org.kde.plasma.mediacontroller
+
+[Containments][6][Applets][91][Configuration]
+PreloadWeight=42
 
 [Containments][6][ConfigDialog]
 DialogHeight=995
