--- a/.config/latte/meow.layout.latte
+++ b/.config/latte/meow.layout.latte
@@ -45,7 +45,7 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][1][Applets][5][Configuration]
-PreloadWeight=100
+PreloadWeight=91
 SystrayContainmentId=6
 
 [Containments][1][Applets][93]
@@ -53,7 +53,7 @@ immutability=1
 plugin=org.kde.plasma.splitdigitalclock
 
 [Containments][1][Applets][93][Configuration]
-PreloadWeight=100
+PreloadWeight=7
 
 [Containments][1][Applets][93][Configuration][Appearance]
 boldText=true
@@ -193,14 +193,14 @@ immutability=1
 plugin=org.kde.plasma.devicenotifier
 
 [Containments][6][Applets][10][Configuration]
-PreloadWeight=37
+PreloadWeight=0
 
 [Containments][6][Applets][11]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][6][Applets][11][Configuration]
-PreloadWeight=39
+PreloadWeight=0
 
 [Containments][6][Applets][13]
 immutability=1
@@ -214,14 +214,14 @@ immutability=1
 plugin=org.kde.plasma.battery
 
 [Containments][6][Applets][14][Configuration]
-PreloadWeight=100
+PreloadWeight=16
 
 [Containments][6][Applets][16]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][6][Applets][16][Configuration]
-PreloadWeight=80
+PreloadWeight=0
 
 [Containments][6][Applets][58]
 immutability=1
@@ -260,7 +260,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][6][Applets][9][Configuration]
-PreloadWeight=5
+PreloadWeight=0
 
 [Containments][6][Applets][9][Configuration][ConfigDialog]
 DialogHeight=720
@@ -269,13 +269,20 @@ DialogWidth=960
 [Containments][6][Applets][9][Configuration][General]
 volumeStep=2
 
+[Containments][6][Applets][97]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][6][Applets][97][Configuration]
+PreloadWeight=0
+
 [Containments][6][ConfigDialog]
 DialogHeight=1048
 DialogWidth=1874
 
 [Containments][6][General]
 extraItems=org.kde.plasma.networkmanagement,org.kde.plasma.clipboard,org.kde.kdeconnect,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.plasma.nightcolorcontrol,org.kde.plasma.manage-inputmethod,org.kde.plasma.keyboardlayout
-hiddenItems=org.kde.kdeconnect,org.kde.plasma.clipboard,org.kde.plasma.mediacontroller,qBittorrent,vlc,Discover Notifier_org.kde.DiscoverNotifier,org.kde.plasma.manage-inputmethod,org.kde.plasma.nightcolorcontrol,Fcitx,Optimus Manager Qt
+hiddenItems=org.kde.kdeconnect,org.kde.plasma.clipboard,org.kde.plasma.mediacontroller,qBittorrent,vlc,Discover Notifier_org.kde.DiscoverNotifier,org.kde.plasma.manage-inputmethod,org.kde.plasma.nightcolorcontrol,Fcitx
 knownItems=org.kde.plasma.networkmanagement,org.kde.plasma.clipboard,org.kde.kdeconnect,org.kde.plasma.battery,org.kde.plasma.bluetooth,org.kde.plasma.notifications,org.kde.plasma.devicenotifier,org.kde.plasma.volume,org.kde.plasma.mediacontroller,org.kde.plasma.nightcolorcontrol,org.kde.plasma.keyboardindicator,org.kde.plasma.manage-inputmethod,org.kde.plasma.keyboardlayout,org.kde.plasma.vault,org.kde.plasma.printmanager
 scaleIconsToFit=true
 shownItems=org.kde.plasma.battery,org.kde.plasma.volume,org.kde.plasma.networkmanagement
