--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,7 @@
 * {
-  font-family: Mononoki Nerd Font, ZCOOL KuaiLe;
-  font-size: 16px;
+  font-family: Mononoki Nerd Font, Zen Maru Gothic, ZCOOL KuaiLe;
+  font-size: 11pt;
+  min-height: 26px;
   font-weight: bold;
   border-radius: 0;
   border: none;
