--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,11 +1,12 @@
 * {
   font-family: Mononoki Nerd Font, Zen Maru Gothic, ZCOOL KuaiLe;
   font-size: 11pt;
-  min-height: 26px;
+  /* min-height: 26px; */
   font-weight: bold;
   border-radius: 0;
   border: none;
   margin: 0 2px;
+  margin-bottom: 0;
 }
 
 #workspaces{
@@ -33,10 +34,9 @@
 #cpu,
 #network,
 #custom-lock{
-  border-radius: 4px;
-  margin: 6px 3px;
-  padding: 6px 12px;
-  margin-bottom: 0;;
+  border-radius: 0 0 6px 6px;
+  margin: 0px 3px;
+  padding: 0px 12px;
   background-color: #1e1e2e;
   color: #181825;
 }
@@ -95,10 +95,9 @@
   /* Fix weird spacing in materia (waybar #450) */
   box-shadow: inset 0 -3px transparent;
   /* Use box-shadow instead of border so the text isn't offset */
-  padding: 6px 6px;
-  margin: 6px 3px;
-  margin-bottom: 0;;
-  border-radius: 4px;
+  margin: 0px 3px;
+  padding: 0px 6px;
+  border-radius: 0 0 6px 6px;
   background-color: rgba(36, 36, 52, 1.0);
   color: #cdd6f4;
 }
