--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,128 +1,151 @@
+/* === global === */
 * {
-  font-family: Mononoki Nerd Font, Zen Maru Gothic, ZCOOL KuaiLe;
-  font-size: 11pt;
-  /* min-height: 26px; */
-  font-weight: bold;
-  border-radius: 0;
-  border: none;
-  margin: 0 2px;
-  margin-bottom: 0;
-}
-
-#workspaces{
-  border: none;
-  box-shadow: none;
+  font-family:
+    Caveat,
+    Mononoki Nerd Font,
+    Zen Maru Gothic,
+    ZCOOL KuaiLe;
+  font-size: 14pt;
+  font-weight: 700;
+  color: white;
+  text-shadow:
+    0px 0px 5px white,
+    0px 0px 5px white,
+    0px 0px 7px white,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black,
+    0px 0px 2px black;
+  margin: 0;
 }
 
 #waybar {
-  background-color: transparent;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
-#tray,
-#window,
-#clock,
-#custom-power,
-#custom-reboot,
-#bluetooth,
-#battery,
-#pulseaudio,
-#backlight,
-#custom-temperature,
-#memory,
-#cpu,
-#network,
-#custom-lock{
+#waybar > * {
+  padding: 0 5px;
+}
+
+/* === modules === */
+.module {
   border-radius: 0 0 6px 6px;
   margin: 0px 3px;
   padding: 0px 12px;
-  background-color: #1e1e2e;
-  color: #181825;
+  background-color: transparent;
 }
 
-#clock {
-  background-color: #89b4fa;
+#workspaces button:hover > *,
+.module:hover > * ,
+.module:hover {
+  font-family:
+    Caveat Brush,
+    Mononoki Nerd Font,
+    Zen Maru Gothic,
+    ZCOOL KuaiLe;
 }
-#custom-power{
-  background-color: #f38ba8;
-}
-#custom-reboot{
-  background-color: #a6e3a1;
-}
-#bluetooth{
-  background-color: #f9e2af;
-}
-#battery{
-  background-color: #cba6f7;
-}
-#pulseaudio{
-  background-color: #89dceb;
-}
-#backlight{
-  background-color: #a6a3a1;
-}
-#custom-temperature{
-  background-color: #74c7ec;
-}
-#memory{
-  background-color: #f7768e;
-}
-#cpu{
-  background-color: #f38ba8;
-}
-#network{
-  background-color: #fab387;
-}
-#custom-lock{
-  background-color: #94e2d5;
-}
-#window{
-  background-color: #74c7ec;
-}
-#tray{
-  background-color: rgba(36, 36, 52, 1.0);
+
+/* .module:active doesn't do anything actually... */
+#workspaces button:active > *,
+.module:active {
+  font-family:
+    Caveat,
+    Mononoki Nerd Font,
+    Zen Maru Gothic,
+    ZCOOL KuaiLe;
 }
 
 #waybar.hidden {
   opacity: 0.5;
 }
 
-#workspaces button {
-  all: initial;
-  /* Remove GTK theme values (waybar #1351) */
-  min-width: 0;
-  /* Fix weird spacing in materia (waybar #450) */
-  box-shadow: inset 0 -3px transparent;
-  /* Use box-shadow instead of border so the text isn't offset */
-  margin: 0px 3px;
-  padding: 0px 6px;
-  border-radius: 0 0 6px 6px;
-  background-color: rgba(36, 36, 52, 1.0);
-  color: #cdd6f4;
-}
-
-#workspaces button.active {
-  color: #1e1e2e;
-  background-color: #cdd6f4;
+/* === workspaces === */
+/* override our hover and default styles... */
+#workspaces:hover {
+  font-weight: 700;
+  font-style: normal;
 }
 
 #workspaces button:hover {
-  box-shadow: inherit;
-  text-shadow: inherit;
-  color: #1e1e2e;
-  background-color: #cdd6f4;
+  background-color: transparent;
 }
 
+/* the rest */
+#workspaces button.active > * {
+  text-shadow:
+    0px 0px 5px white,
+    0px 0px 5px white,
+    0px 0px 7px white;
+}
+
+#workspaces button:hover > * {
+  text-decoration: solid underline;
+}
+
+/* === tooltip === */
 tooltip {
-  border-radius: 8px;
-  padding: 16px;
-  background-color: #131822;
-  color: #C0C0C0;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+}
+
+tooltip box {
+  padding: 2px 4px;
 }
 
 tooltip label {
-  padding: 5px;
-  background-color: #131822;
-  color: #C0C0C0;
+  text-shadow: none;
 }
+
+/* === module colors === */
+/*
+#clock {
+  background-color: #89b4fa;
+}
+#custom-power {
+  background-color: #f38ba8;
+}
+#custom-reboot {
+  background-color: #a6e3a1;
+}
+#bluetooth {
+  background-color: #f9e2af;
+}
+#battery {
+  background-color: #cba6f7;
+}
+#pulseaudio {
+  background-color: #89dceb;
+}
+#backlight {
+  background-color: #a6a3a1;
+}
+#custom-temperature {
+  background-color: #74c7ec;
+}
+#memory {
+  background-color: #f7768e;
+}
+#cpu {
+  background-color: #f38ba8;
+}
+#network {
+  background-color: #fab387;
+}
+#custom-lock {
+  background-color: #94e2d5;
+}
+#window {
+  background-color: #74c7ec;
+}
+#tray {
+  background-color: rgba(36, 36, 52, 1);
+}
+*/
