--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,7 +5,7 @@
     Monofoki Nerd Font,
     Zen Maru Gothic,
     ZCOOL KuaiLe;
-  font-size: 1em;
+  font-size: 14pt;
   font-weight: 700;
   color: white;
   text-shadow:
