--- a/.config/walker/themes/mizukitty.css
+++ b/.config/walker/themes/mizukitty.css
@@ -47,11 +47,19 @@ slider,
   background: transparent;
 }
 
+#search {
+  padding: 20px 8px;
+}
+
 #prompt {
-  margin-left: 4px;
-  margin-right: 12px;
-  color: white;
-  opacity: 0.2;
+  font-weight: bolder;
+  font-size: 2em;
+  transform: skewX(17deg) skewY(17deg);
+  opacity: 1;
+  margin: 0 30px 0 20px;
+  /* text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.8); */
+  outline: 2px solid white;
+  background-color: black;
 }
 
 #input placeholder {
@@ -62,9 +70,16 @@ slider,
   padding: 8px 30px;
 }
 
-/* search and highlighted stuff */
-#search {
-  padding: 8px 0;
+/* individual app items */
+child {
+  background: black;
+  padding: 14px;
+  margin-bottom: 10px;
+  border: 3px solid rgb(255, 255, 255);
+  transform: skewX(2deg) skewY(-1deg) scale(0.9);
+  filter: blur(1px) brightness(0.9);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+  transition: all 0.05s ease-in-out;
 }
 
 #search,
@@ -73,23 +88,38 @@ child:hover {
   background: black;
   border: 5px solid rgb(255, 255, 255);
   transform: none;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.8);
+  filter: none;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
 }
 
 child:selected > *,
 child:hover {
+  --highlight-color: #DC1EE0;
   font-family: Caveat brush;
-  text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
-}
-
-/* individual app items */
-child {
-  background: black;
-  padding: 14px;
-  margin-bottom: 10px;
-  border: 3px solid rgb(255, 255, 255);
-  transform: skewX(2deg) skewY(-1deg) scale(0.9);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+  color: white;
+  text-shadow:
+    0px 0px 20px rgba(255, 255, 255, 0.5),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color);
 }
 
 #icon {
@@ -99,7 +129,6 @@ child {
 /* child:nth-child(1) {
   transform: skewX(2deg) skewY(-1deg) scale(0.95);
 } */
-
 
 #label {
 }
