--- a/.config/walker/themes/mizukitty.css
+++ b/.config/walker/themes/mizukitty.css
@@ -40,6 +40,7 @@ slider,
   font-weight: 700;
   color: white;
   margin: 0;
+  caret-color: transparent;
 }
 
 /* main box */
@@ -77,9 +78,8 @@ child {
   margin-bottom: 10px;
   border: 3px solid rgb(255, 255, 255);
   transform: skewX(2deg) skewY(-1deg) scale(0.9);
-  filter: blur(1px) brightness(0.9);
+  filter: brightness(0.9);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
-  transition: all 0.05s ease-in-out;
 }
 
 #search,
@@ -90,15 +90,35 @@ child:hover {
   transform: none;
   filter: none;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+  transition: all 0.2s;
 }
 
 child:selected > *,
 child:hover {
-  --highlight-color: #DC1EE0;
+  --highlight-color: #b842bb;
   font-family: Caveat brush;
   color: white;
   text-shadow:
-    0px 0px 20px rgba(255, 255, 255, 0.5),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
+    0px 0px 4px var(--highlight-color),
     0px 0px 4px var(--highlight-color),
     0px 0px 4px var(--highlight-color),
     0px 0px 4px var(--highlight-color),
