--- a/.config/walker/themes/mizukitty.css
+++ b/.config/walker/themes/mizukitty.css
@@ -29,6 +29,17 @@ slider,
   font-size: 1.2em;
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 /* text */
 * {
   font-family:
@@ -46,20 +57,34 @@ slider,
 /* main box */
 #box {
   background: transparent;
+  animation: slideIn 0.15s ease-in-out;
 }
 
+/* search */
 #search {
   padding: 20px 8px;
+}
+
+@keyframes prompt-skew {
+  from {
+    transform: skewX(-13deg) skewY(-8deg);
+  }
+  50% {
+    transform: skewX(17deg) skewY(17deg);
+  }
+  to {
+    transform: skewX(13deg) skewY(8deg);
+  }
 }
 
 #prompt {
   font-weight: bolder;
   font-size: 2em;
   transform: skewX(17deg) skewY(17deg);
+  animation: prompt-skew 0.5s steps(5) infinite alternate;
   opacity: 1;
   margin: 0 30px 0 20px;
-  /* text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.8); */
-  outline: 2px solid white;
+  border: 2px solid white;
   background-color: black;
 }
 
@@ -67,35 +92,63 @@ slider,
   opacity: 0.5;
 }
 
+/* app list + search */
+
 #list {
-  padding: 8px 30px;
+  padding: 20px 30px;
+  /* doesnt work.. */
+  margin-top: 3px !important;
 }
 
-/* individual app items */
 child {
+  border-radius: 5px;
   background: black;
   padding: 14px;
   margin-bottom: 10px;
-  border: 3px solid rgb(255, 255, 255);
+
+  box-shadow:
+    0px 0px 10px rgba(0, 0, 0, 0.8),
+    0px 0px 0 3px rgb(255, 255, 255);
+
   transform: skewX(2deg) skewY(-1deg) scale(0.9);
   filter: brightness(0.9);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 }
+
+/* child:first-child {
+  animation: idk 0.1s ease-in-out;
+}
+child:nth-child(2) {
+  animation: idk 0.2s ease-in-out;
+}
+child:nth-child(3) {
+  animation: idk 0.3s ease-in-out;
+}
+child:nth-child(4) {
+  animation: idk 0.4s ease-in-out;
+}
+*/
 
 #search,
 child:selected,
 child:hover {
   background: black;
-  border: 5px solid rgb(255, 255, 255);
   transform: none;
   filter: none;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+  box-shadow:
+    0px 0px 20px rgba(0, 0, 0, 0.4),
+    0px 0px 0 5px rgb(255, 255, 255);
   transition: all 0.2s;
+}
+
+#search {
+  box-shadow:
+    0px 0px 20px rgba(0, 0, 0, 0.4),
+    0px 0px 0 8px rgb(255, 255, 255);
 }
 
 child:selected > *,
 child:hover {
-  --highlight-color: #b842bb;
+  --highlight-color: #8d3290;
   font-family: Caveat brush;
   color: white;
   text-shadow:
@@ -146,14 +199,6 @@ child:hover {
   margin-right: 14px;
 }
 
-/* child:nth-child(1) {
-  transform: skewX(2deg) skewY(-1deg) scale(0.95);
-} */
-
-#label {
-}
-
 #sub {
-  opacity: 0.5;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
